[package]
name = "anticheat"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
anticheat-common = { path = "../common", features = ["user"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "net", "process"] }
libc = "0.2"
