[package]
name = "anticheat-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
anticheat-common = { path = "../common" }

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }

[profile.release]
lto = true
opt-level = 3
debug = 2
